--- a/example.ipynb
+++ b/example.ipynb
@@ -10,6 +10,12 @@
     "torch._dynamo.config.cache_size_limit = 64\n",
     "torch._dynamo.config.suppress_errors = True\n",
     "torch.set_float32_matmul_precision('high')\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
     "\n",
     "import ChatTTS\n",
     "from IPython.display import Audio"
