fix(ipy): missing envs

--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(\"sha256.env\")\n",
+    "\n",
     "import torch\n",
     "torch._dynamo.config.cache_size_limit = 64\n",
     "torch._dynamo.config.suppress_errors = True\n",
