fix(examples): ipnyb infer

--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -13,8 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os, sys\n",
+    "\n",
+    "if sys.platform == \"darwin\":\n",
+    "    os.environ[\"PYTORCH_ENABLE_MPS_FALLBACK\"] = \"1\"\n",
+    "\n",
+    "if not \"root_dir\" in globals():\n",
+    "    now_dir = os.getcwd() # skip examples/ipynb\n",
+    "    root_dir = os.path.join(now_dir, \"../../\")\n",
+    "    sys.path.append(root_dir)\n",
+    "    print(\"init root dir to\", root_dir)\n",
+    "\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv(\"sha256.env\")\n",
+    "load_dotenv(os.path.join(root_dir, \"sha256.env\"))\n",
     "\n",
     "import torch\n",
     "torch._dynamo.config.cache_size_limit = 64\n",
@@ -38,6 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.chdir(root_dir)\n",
+    "\n",
     "chat = ChatTTS.Chat()\n",
     "chat.load_models()\n",
     "\n",
@@ -70,7 +83,7 @@
    "source": [
     "texts = [\"So we found being competitive and collaborative was a huge way of staying motivated towards our goals, so one person to call when you fall off, one person who gets you back on then one person to actually do the activity with.\",]*3 \\\n",
     "        + [\"我觉得像我们这些写程序的人，他，我觉得多多少少可能会对开源有一种情怀在吧我觉得开源是一个很好的形式。现在其实最先进的技术掌握在一些公司的手里的话，就他们并不会轻易的开放给所有的人用。\"]*3     \n",
-    "        \n",
+    "\n",
     "wavs = chat.infer(texts)"
    ]
   },
@@ -239,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
