revise the Load Models part of examples/ipynb

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -2,12 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## Clone Repo"
-      ],
       "metadata": {
         "id": "xYJFXKP9xhQM"
-      }
+      },
+      "source": [
+        "## Clone Repo"
+      ]
     },
     {
       "cell_type": "code",
@@ -26,12 +26,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Import Libs"
-      ],
       "metadata": {
         "id": "zdzEFoknxqTH"
-      }
+      },
+      "source": [
+        "## Import Libs"
+      ]
     },
     {
       "cell_type": "code",
@@ -70,13 +70,65 @@
       },
       "outputs": [],
       "source": [
-        "chat = ChatTTS.Chat()\n",
-        "\n",
-        "# Use force_redownload=True if the weights updated.\n",
-        "chat.load_models(source = 'huggingface')\n",
-        "\n",
-        "# If you download the weights manually, set source='custom'.\n",
-        "# chat.load_models(source='custom', custom_path='YOUR CUSTOM PATH')"
+        "chat = ChatTTS.Chat()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Here are three choices for loading models:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 1. Load models from Hugging Face:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# use force_redownload=True if the weights have been updated.\n",
+        "chat.load_models(source='huggingface', force_redownload=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 2. Load models from local directories 'asset' and 'config':"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "chat.load_models()\n",
+        "# chat.load_models(source='local') same as above"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 3. Load models from a custom path:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# write the model path into custom_path\n",
+        "chat.load_models(source='custom', custom_path='YOUR CUSTOM PATH')"
       ]
     },
     {
