--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -51,14 +51,65 @@
    "source": [
     "os.chdir(root_dir)\n",
     "\n",
-    "chat = ChatTTS.Chat()\n",
+    "chat = ChatTTS.Chat()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here are three choices for loading models:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Load models from Hugging Face:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use force_redownload=True if the weights have been updated.\n",
+    "chat.load_models(source='huggingface', force_redownload=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Load models from local directories 'asset' and 'config':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "chat.load_models()\n",
-    "\n",
-    "# Use force_redownload=True if the weights updated.\n",
-    "# chat.load_models(force_redownload=True)\n",
-    "\n",
-    "# If you download the weights manually, set source='locals'.\n",
-    "# chat.load_models(source='local', local_path='YOUR LOCAL PATH')"
+    "# chat.load_models(source='local') same as above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Load models from a custom path:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write the model path into custom_path\n",
+    "chat.load_models(source='custom', custom_path='YOUR CUSTOM PATH')"
    ]
   },
   {
