feat(ipynb): apply logger to notebook

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -50,6 +50,7 @@
         "torch.set_float32_matmul_precision('high')\n",
         "\n",
         "from ChatTTS import ChatTTS\n",
+        "from ChatTTS.tools.logger import get_logger\n",
         "from IPython.display import Audio"
       ]
     },
@@ -70,7 +71,7 @@
       },
       "outputs": [],
       "source": [
-        "chat = ChatTTS.Chat()"
+        "chat = ChatTTS.Chat(get_logger(\"ChatTTS\"))"
       ]
     },
     {
