--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -33,6 +33,7 @@
     "torch.set_float32_matmul_precision('high')\n",
     "\n",
     "import ChatTTS\n",
+    "from tools.logger import get_logger\n",
     "from IPython.display import Audio"
    ]
   },
@@ -51,7 +52,7 @@
    "source": [
     "os.chdir(root_dir)\n",
     "\n",
-    "chat = ChatTTS.Chat()"
+    "chat = ChatTTS.Chat(get_logger(\"ChatTTS\"))"
    ]
   },
   {
