optimize: log printing

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -18,7 +18,7 @@
       "outputs": [],
       "source": [
         "!cd /content\n",
-        "!rm -rf /content/ChatTTS\n",
+        "!rm -rf sample_data ChatTTS\n",
         "!git clone https://github.com/2noise/ChatTTS.git\n",
         "!pip install -r /content/ChatTTS/requirements.txt\n",
         "!ldconfig /usr/lib64-nvidia"
