optimize: core & model
### all
- reduce redundant code
- add `_` to some inner calls
### core
- rename `check_model` to `has_loaded`
- new api `download_models`
- move vocos out of models dict (further target: remove the dict `pretrain_models`)
- new api `unload`
- new api `decode_to_wavs`
### model
- fix grad mul issue in dvae
- optimize progress bar display
- optimize tensor operations

--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -117,6 +117,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### You can also unload models to save the memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat.unload()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inference"
    ]
   },
