--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -134,6 +134,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### You can also unload models to save the memory"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "chat.unload()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "bAUs0rGQbSrh"
       },
