doc: sync to latest grammar

--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -34,6 +34,7 @@
     "\n",
     "import ChatTTS\n",
     "from tools.logger import get_logger\n",
+    "from tools.normalizer import normalizer_en_nemo_text, normalizer_zh_tn\n",
     "from IPython.display import Audio"
    ]
   },
@@ -52,7 +53,24 @@
    "source": [
     "os.chdir(root_dir)\n",
     "\n",
-    "chat = ChatTTS.Chat(get_logger(\"ChatTTS\"))"
+    "logger = get_logger(\"ChatTTS\")\n",
+    "chat = ChatTTS.Chat(logger)\n",
+    "\n",
+    "# try to load normalizer\n",
+    "try:\n",
+    "    chat.normalizer.register(\"en\", normalizer_en_nemo_text())\n",
+    "except:\n",
+    "    logger.warning('Package nemo_text_processing not found!')\n",
+    "    logger.warning(\n",
+    "        'Run: conda install -c conda-forge pynini=2.1.5 && pip install nemo_text_processing',\n",
+    "    )\n",
+    "try:\n",
+    "    chat.normalizer.register(\"zh\", normalizer_zh_tn())\n",
+    "except:\n",
+    "    logger.warning('Package WeTextProcessing not found!')\n",
+    "    logger.warning(\n",
+    "        'Run: conda install -c conda-forge pynini=2.1.5 && pip install WeTextProcessing',\n",
+    "    )"
    ]
   },
   {
@@ -186,8 +204,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_infer_code = {'prompt':'[speed_5]', 'temperature':.3}\n",
-    "params_refine_text = {'prompt':'[oral_2][laugh_0][break_6]'}\n",
+    "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
+    "    prompt='[speed_5]',\n",
+    "    temperature=.3,\n",
+    ")\n",
+    "params_refine_text = ChatTTS.Chat.RefineTextParams(\n",
+    "    prompt='[oral_2][laugh_0][break_6]',\n",
+    ")\n",
     "\n",
     "wav = chat.infer('四川美食可多了，有麻辣火锅、宫保鸡丁、麻婆豆腐、担担面、回锅肉、夫妻肺片等，每样都让人垂涎三尺。', \\\n",
     "    params_refine_text=params_refine_text, params_infer_code=params_infer_code)"
@@ -216,7 +239,9 @@
    "outputs": [],
    "source": [
     "rand_spk = chat.sample_random_speaker()\n",
-    "params_infer_code = {'spk_emb' : rand_spk, }\n",
+    "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
+    "    spk_emb=rand_spk,\n",
+    ")\n",
     "\n",
     "wav = chat.infer('四川美食确实以辣闻名，但也有不辣的选择。比如甜水面、赖汤圆、蛋烘糕、叶儿粑等，这些小吃口味温和，甜而不腻，也很受欢迎。', \\\n",
     "    params_refine_text=params_refine_text, params_infer_code=params_infer_code)"
@@ -245,7 +270,8 @@
    "outputs": [],
    "source": [
     "text = \"So we found being competitive and collaborative was a huge way of staying motivated towards our goals, so one person to call when you fall off, one person who gets you back on then one person to actually do the activity with.\"\n",
-    "chat.infer(text, refine_text_only=True)"
+    "refined_text = chat.infer(text, refine_text_only=True)\n",
+    "refined_text"
    ]
   },
   {
@@ -254,8 +280,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'so we found being competitive and collaborative [uv_break] was a huge way of staying [uv_break] motivated towards our goals, [uv_break] so [uv_break] one person to call [uv_break] when you fall off, [uv_break] one person who [uv_break] gets you back [uv_break] on then [uv_break] one person [uv_break] to actually do the activity with.'\n",
-    "wav = chat.infer(text, skip_refine_text=True)"
+    "wav = chat.infer(refined_text, skip_refine_text=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(wav[0], rate=24_000, autoplay=True)"
    ]
   },
   {
@@ -271,10 +305,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ChatTTS.experimental.llm import llm_api\n",
+    "from tools.llm import ChatOpenAI\n",
     "\n",
     "API_KEY = ''\n",
-    "client = llm_api(api_key=API_KEY,\n",
+    "client = ChatOpenAI(api_key=API_KEY,\n",
     "        base_url=\"https://api.deepseek.com\",\n",
     "        model=\"deepseek-chat\")"
    ]
@@ -285,11 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_question = '四川有哪些好吃的美食呢?'\n",
-    "text = client.call(user_question, prompt_version = 'deepseek')\n",
-    "print(text)\n",
-    "text = client.call(text, prompt_version = 'deepseek_TN')\n",
-    "print(text)"
+    "user_question = '四川有哪些好吃的美食呢?'"
    ]
   },
   {
@@ -298,9 +328,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_infer_code = {'spk_emb' : rand_spk, 'temperature':.3}\n",
-    "\n",
-    "wav = chat.infer(text, params_infer_code=params_infer_code)"
+    "text = client.call(user_question, prompt_version = 'deepseek')\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = client.call(text, prompt_version = 'deepseek_TN')\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav = chat.infer(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(wav[0], rate=24_000, autoplay=True)"
    ]
   }
  ],
