--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -51,6 +51,7 @@
         "\n",
         "from ChatTTS import ChatTTS\n",
         "from ChatTTS.tools.logger import get_logger\n",
+        "from ChatTTS.tools.normalizer import normalizer_en_nemo_text, normalizer_zh_tn\n",
         "from IPython.display import Audio"
       ]
     },
@@ -71,19 +72,40 @@
       },
       "outputs": [],
       "source": [
-        "chat = ChatTTS.Chat(get_logger(\"ChatTTS\"))"
+        "logger = get_logger(\"ChatTTS\")\n",
+        "chat = ChatTTS.Chat(logger, remove_exist=True)\n",
+        "\n",
+        "# try to load normalizer\n",
+        "try:\n",
+        "    chat.normalizer.register(\"en\", normalizer_en_nemo_text())\n",
+        "except:\n",
+        "    logger.warning('Package nemo_text_processing not found!')\n",
+        "    logger.warning(\n",
+        "        'Run: conda install -c conda-forge pynini=2.1.5 && pip install nemo_text_processing',\n",
+        "    )\n",
+        "try:\n",
+        "    chat.normalizer.register(\"zh\", normalizer_zh_tn())\n",
+        "except:\n",
+        "    logger.warning('Package WeTextProcessing not found!')\n",
+        "    logger.warning(\n",
+        "        'Run: conda install -c conda-forge pynini=2.1.5 && pip install WeTextProcessing',\n",
+        "    )"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "3Ty427FZNH30"
+      },
       "source": [
         "### Here are three choices for loading models:"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "NInF7Lk1NH30"
+      },
       "source": [
         "#### 1. Load models from Hugging Face:"
       ]
@@ -91,7 +113,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "VVtNlNosNH30"
+      },
       "outputs": [],
       "source": [
         "# use force_redownload=True if the weights have been updated.\n",
@@ -100,7 +124,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "AhBD5WUPNH30"
+      },
       "source": [
         "#### 2. Load models from local directories 'asset' and 'config':"
       ]
@@ -108,7 +134,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "83UwV6SGNH31"
+      },
       "outputs": [],
       "source": [
         "chat.load_models()\n",
@@ -117,7 +145,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "c0qjGPNkNH31"
+      },
       "source": [
         "#### 3. Load models from a custom path:"
       ]
@@ -125,7 +155,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "oCSBx0Q7NH31"
+      },
       "outputs": [],
       "source": [
         "# write the model path into custom_path\n",
@@ -134,7 +166,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "VoEki3XMNH31"
+      },
       "source": [
         "### You can also unload models to save the memory"
       ]
@@ -142,7 +176,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "3FdsTSxoNH31"
+      },
       "outputs": [],
       "source": [
         "chat.unload()"
@@ -219,8 +255,13 @@
       },
       "outputs": [],
       "source": [
-        "params_infer_code = {'prompt':'[speed_5]', 'temperature':.3}\n",
-        "params_refine_text = {'prompt':'[oral_2][laugh_0][break_6]'}\n",
+        "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
+        "    prompt='[speed_5]',\n",
+        "    temperature=.3,\n",
+        ")\n",
+        "params_refine_text = ChatTTS.Chat.RefineTextParams(\n",
+        "    prompt='[oral_2][laugh_0][break_6]',\n",
+        ")\n",
         "\n",
         "wav = chat.infer('四川美食可多了，有麻辣火锅、宫保鸡丁、麻婆豆腐、担担面、回锅肉、夫妻肺片等，每样都让人垂涎三尺。', \\\n",
         "    params_refine_text=params_refine_text, params_infer_code=params_infer_code)"
@@ -255,7 +296,9 @@
       "outputs": [],
       "source": [
         "rand_spk = chat.sample_random_speaker()\n",
-        "params_infer_code = {'spk_emb' : rand_spk, }\n",
+        "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
+        "    spk_emb=rand_spk,\n",
+        ")\n",
         "\n",
         "wav = chat.infer('四川美食确实以辣闻名，但也有不辣的选择。比如甜水面、赖汤圆、蛋烘糕、叶儿粑等，这些小吃口味温和，甜而不腻，也很受欢迎。', \\\n",
         "    params_refine_text=params_refine_text, params_infer_code=params_infer_code)"
@@ -302,7 +345,7 @@
       },
       "outputs": [],
       "source": [
-        "wav = chat.infer(refined_text)"
+        "wav = chat.infer(refined_text, skip_refine_text=True)"
       ]
     },
     {
@@ -310,29 +353,6 @@
       "execution_count": null,
       "metadata": {
         "id": "ngyMht74BicY"
-      },
-      "outputs": [],
-      "source": [
-        "Audio(wav[0], rate=24_000, autoplay=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "R2WjuVrWbSrl"
-      },
-      "outputs": [],
-      "source": [
-        "text = 'so we found being competitive and collaborative [uv_break] was a huge way of staying [uv_break] motivated towards our goals, [uv_break] so [uv_break] one person to call [uv_break] when you fall off, [uv_break] one person who [uv_break] gets you back [uv_break] on then [uv_break] one person [uv_break] to actually do the activity with.'\n",
-        "wav = chat.infer(text, skip_refine_text=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "71Y4pBdl-_Yd"
       },
       "outputs": [],
       "source": [
@@ -356,10 +376,10 @@
       },
       "outputs": [],
       "source": [
-        "from ChatTTS.experimental.llm import llm_api\n",
+        "from ChatTTS.tools.llm import ChatOpenAI\n",
         "\n",
         "API_KEY = ''\n",
-        "client = llm_api(api_key=API_KEY,\n",
+        "client = ChatOpenAI(api_key=API_KEY,\n",
         "        base_url=\"https://api.deepseek.com\",\n",
         "        model=\"deepseek-chat\")"
       ]
@@ -372,11 +392,31 @@
       },
       "outputs": [],
       "source": [
-        "user_question = '四川有哪些好吃的美食呢?'\n",
+        "user_question = '四川有哪些好吃的美食呢?'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3yT8uNz-RVy1"
+      },
+      "outputs": [],
+      "source": [
         "text = client.call(user_question, prompt_version = 'deepseek')\n",
-        "print(text)\n",
+        "text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6qddpv7lRW-3"
+      },
+      "outputs": [],
+      "source": [
         "text = client.call(text, prompt_version = 'deepseek_TN')\n",
-        "print(text)"
+        "text"
       ]
     },
     {
@@ -387,9 +427,18 @@
       },
       "outputs": [],
       "source": [
-        "params_infer_code = {'spk_emb' : rand_spk, 'temperature':.3}\n",
-        "\n",
-        "wav = chat.infer(text, params_infer_code=params_infer_code)"
+        "wav = chat.infer(text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Wq1XQHmFRQI3"
+      },
+      "outputs": [],
+      "source": [
+        "Audio(wav[0], rate=24_000, autoplay=True)"
       ]
     }
   ],
