fix(norm): wrong type check to function (fix #423)

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -72,12 +72,14 @@
       },
       "outputs": [],
       "source": [
-        "logger = get_logger(\"ChatTTS\")\n",
-        "chat = ChatTTS.Chat(logger, remove_exist=True)\n",
+        "logger = get_logger(\"ChatTTS\", remove_exist=True)\n",
+        "chat = ChatTTS.Chat(logger)\n",
         "\n",
         "# try to load normalizer\n",
         "try:\n",
         "    chat.normalizer.register(\"en\", normalizer_en_nemo_text())\n",
+        "except ValueError as e:\n",
+        "    logger.error(e)\n",
         "except:\n",
         "    logger.warning('Package nemo_text_processing not found!')\n",
         "    logger.warning(\n",
@@ -85,6 +87,8 @@
         "    )\n",
         "try:\n",
         "    chat.normalizer.register(\"zh\", normalizer_zh_tn())\n",
+        "except ValueError as e:\n",
+        "    logger.error(e)\n",
         "except:\n",
         "    logger.warning('Package WeTextProcessing not found!')\n",
         "    logger.warning(\n",
