--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -59,6 +59,8 @@
     "# try to load normalizer\n",
     "try:\n",
     "    chat.normalizer.register(\"en\", normalizer_en_nemo_text())\n",
+    "except ValueError as e:\n",
+    "    logger.error(e)\n",
     "except:\n",
     "    logger.warning('Package nemo_text_processing not found!')\n",
     "    logger.warning(\n",
@@ -66,6 +68,8 @@
     "    )\n",
     "try:\n",
     "    chat.normalizer.register(\"zh\", normalizer_zh_tn())\n",
+    "except ValueError as e:\n",
+    "    logger.error(e)\n",
     "except:\n",
     "    logger.warning('Package WeTextProcessing not found!')\n",
     "    logger.warning(\n",
