fix(colab): color log printing

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -72,7 +72,7 @@
       },
       "outputs": [],
       "source": [
-        "logger = get_logger(\"ChatTTS\", remove_exist=True)\n",
+        "logger = get_logger(\"ChatTTS\", format_root=True)\n",
         "chat = ChatTTS.Chat(logger)\n",
         "\n",
         "# try to load normalizer\n",
