--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -123,7 +123,7 @@
       "outputs": [],
       "source": [
         "# use force_redownload=True if the weights have been updated.\n",
-        "chat.load_models(source='huggingface', force_redownload=True)"
+        "chat.load(source='huggingface', force_redownload=True)"
       ]
     },
     {
@@ -143,8 +143,8 @@
       },
       "outputs": [],
       "source": [
-        "chat.load_models()\n",
-        "# chat.load_models(source='local') same as above"
+        "chat.load()\n",
+        "# chat.load(source='local') same as above"
       ]
     },
     {
@@ -165,7 +165,7 @@
       "outputs": [],
       "source": [
         "# write the model path into custom_path\n",
-        "chat.load_models(source='custom', custom_path='YOUR CUSTOM PATH')"
+        "chat.load(source='custom', custom_path='YOUR CUSTOM PATH')"
       ]
     },
     {
