doc: add TransformerEngine installation instruction

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -19,7 +19,22 @@
    "source": [
     "!cd /content\n",
     "!rm -rf sample_data ChatTTS\n",
-    "!git clone https://github.com/2noise/ChatTTS.git\n",
+    "!git clone https://github.com/2noise/ChatTTS.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Install Requirements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install -r /content/ChatTTS/requirements.txt\n",
     "!ldconfig /usr/lib64-nvidia"
    ]
@@ -30,7 +45,7 @@
     "id": "zdzEFoknxqTH"
    },
    "source": [
-    "## Import Libs"
+    "## Import Packages"
    ]
   },
   {
