feat(gpt): add flash_attention_2 support

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -36,7 +36,8 @@
    "outputs": [],
    "source": [
     "!pip install -r /content/ChatTTS/requirements.txt\n",
-    "!ldconfig /usr/lib64-nvidia"
+    "!ldconfig /usr/lib64-nvidia\n",
+    "!pip install flash-attn --no-build-isolation"
    ]
   },
   {
