feat: add optional param `use_flash_attn`

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -36,8 +36,7 @@
    "outputs": [],
    "source": [
     "!pip install -r /content/ChatTTS/requirements.txt\n",
-    "!ldconfig /usr/lib64-nvidia\n",
-    "!pip install flash-attn --no-build-isolation"
+    "!ldconfig /usr/lib64-nvidia"
    ]
   },
   {
@@ -116,7 +115,7 @@
     "id": "3Ty427FZNH30"
    },
    "source": [
-    "### Here are three choices for loading models:"
+    "### Here are three choices for loading models,"
    ]
   },
   {
@@ -125,7 +124,7 @@
     "id": "NInF7Lk1NH30"
    },
    "source": [
-    "#### 1. Load models from Hugging Face:"
+    "#### 1. Load models from Hugging Face (recommend)"
    ]
   },
   {
@@ -137,7 +136,7 @@
    "outputs": [],
    "source": [
     "# use force_redownload=True if the weights have been updated.\n",
-    "chat.load(source=\"huggingface\", force_redownload=True)"
+    "chat.load(source=\"huggingface\")"
    ]
   },
   {
@@ -146,7 +145,7 @@
     "id": "AhBD5WUPNH30"
    },
    "source": [
-    "#### 2. Load models from local directories 'asset' and 'config':"
+    "#### 2. Load models from local directories 'asset' and 'config'"
    ]
   },
   {
@@ -167,7 +166,7 @@
     "id": "c0qjGPNkNH31"
    },
    "source": [
-    "#### 3. Load models from a custom path:"
+    "#### 3. Load models from a custom path"
    ]
   },
   {
