--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -79,14 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Here are three choices for loading models:"
+    "### Here are three choices for loading models,"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Load models from Hugging Face:"
+    "#### 1. Load models from Hugging Face (not suitable in CN)"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Load models from local directories 'asset' and 'config':"
+    "#### 2. Load models from local directories 'asset' and 'config' (recommend)"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Load models from a custom path:"
+    "#### 3. Load models from a custom path"
    ]
   },
   {
