feat(algorithm): impl. zero shot demo

--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -272,6 +272,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Zero shot (simulate speaker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.audio import load_audio\n",
+    "\n",
+    "sample = chat.sample_audio_speaker(load_audio(\"sample.mp3\", 24000))\n",
+    "print(sample) # save it in order to load the speaker without sample audio next time\n",
+    "\n",
+    "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
+    "    sample=sample,\n",
+    ")\n",
+    "\n",
+    "wav = chat.infer(\n",
+    "    \"四川美食确实以辣闻名，但也有不辣的选择。比如甜水面、赖汤圆、蛋烘糕、叶儿粑等，这些小吃口味温和，甜而不腻，也很受欢迎。\",\n",
+    "    params_infer_code=params_infer_code,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(wav[0], rate=24_000, autoplay=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Two stage control"
    ]
   },
