--- a/examples/ipynb/example.ipynb
+++ b/examples/ipynb/example.ipynb
@@ -283,11 +283,12 @@
    "source": [
     "from tools.audio import load_audio\n",
     "\n",
-    "sample = chat.sample_audio_speaker(load_audio(\"sample.mp3\", 24000))\n",
-    "print(sample)  # save it in order to load the speaker without sample audio next time\n",
+    "spk_smp = chat.sample_audio_speaker(load_audio(\"sample.mp3\", 24000))\n",
+    "print(spk_smp)  # save it in order to load the speaker without sample audio next time\n",
     "\n",
     "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
-    "    sample=sample,\n",
+    "    spk_smp=spk_smp,\n",
+    "    txt_smp=\"与sample.mp3内容完全一致的文本转写。\",\n",
     ")\n",
     "\n",
     "wav = chat.infer(\n",
