--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -344,6 +344,44 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Zero shot (simulate speaker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.audio import load_audio\n",
+    "\n",
+    "spk_smp = chat.sample_audio_speaker(load_audio(\"sample.mp3\", 24000))\n",
+    "print(spk_smp)  # save it in order to load the speaker without sample audio next time\n",
+    "\n",
+    "params_infer_code = ChatTTS.Chat.InferCodeParams(\n",
+    "    spk_smp=spk_smp,\n",
+    "    txt_smp=\"与sample.mp3内容完全一致的文本转写。\",\n",
+    ")\n",
+    "\n",
+    "wav = chat.infer(\n",
+    "    \"四川美食确实以辣闻名，但也有不辣的选择。比如甜水面、赖汤圆、蛋烘糕、叶儿粑等，这些小吃口味温和，甜而不腻，也很受欢迎。\",\n",
+    "    params_infer_code=params_infer_code,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Audio(wav[0], rate=24_000, autoplay=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "u1q-BcUKbSrl"
    },
