fix(colab): zero shot import

--- a/examples/ipynb/colab.ipynb
+++ b/examples/ipynb/colab.ipynb
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tools.audio import load_audio\n",
+    "from ChatTTS.tools.audio import load_audio\n",
     "\n",
     "spk_smp = chat.sample_audio_speaker(load_audio(\"sample.mp3\", 24000))\n",
     "print(spk_smp)  # save it in order to load the speaker without sample audio next time\n",
